Fixes issue where buttons rendered without space on small screens

--- a/assets/source/3.0/sass/blocks.scss
+++ b/assets/source/3.0/sass/blocks.scss
@@ -1,5 +1,15 @@
 .t-block-container {
 
+    &.t-block-button {
+        flex-wrap: wrap;
+        gap: calc(#{$base}*2);
+        margin: auto;
+
+        .c-button + .c-button {
+            margin-left: initial;
+        }
+    }
+
     &.t-block-align {
 
         &-left,
